stories/Components/Footer/footer.scss
.mg-footer {
  --mg-gutenberg-spacer: 0;
}

.mg-footer--about-footer {
  text-wrap: balance;
  color: $mg-color-white;
  padding-bottom: $mg-spacing-200;
  padding-top: $mg-spacing-200;

  a,
  a:hover {
    color: $mg-color-white;
  }

  .container {
    margin-bottom: 0;
  }
}

.mg-footer--about-footer--links {
  font-size: $mg-font-size-500;
  display: inline-flex;
  flex-wrap: wrap;
  gap: 0.75rem 2rem;
}

.mg-footer--about-footer--description {
  font-size: $mg-font-size-400;
}

.mg-footer--social-links {
  display: inline-flex;
  flex-wrap: wrap;
  gap: 1.5rem;
  padding-left: 0;

  li {
    display: inline-block;
  }

  li a {
    color: $mg-color-white;
    text-underline-offset: 5px;
  }
}

// Constrain footer images (Sendai/SDG logos)
.mg-footer img {
  max-width: 100%;
  height: auto;
}

// Reset grid spans below tablet so footer columns stack
@media (max-width: $mg-breakpoint-tablet) {
  .mg-footer {
    .mg-grid__col--span-2,
    .mg-grid__col--span-3 {
      grid-column-end: auto;
    }
  }
}

// Link-spacer mobile stacking (syndicated widget content)
@media (max-width: $mg-breakpoint-mobile) {
  .mg-footer .link-spacer {
    display: grid;
    margin-right: 0;
    white-space: normal;
  }
}

